补充style / router / env 部分文件

--- a/plop/page-template/_index_vue.hbs
+++ b/plop/page-template/_index_vue.hbs
@@ -1,8 +1,9 @@
 <template>
-  {{ num }}
+  \{{ num }}
 </template>
 
 <script setup lang="ts">
+import { ref } from "vue"
 const num = ref<string>("{{name}}");
 </script>
 
