--- a/src/common/style/_variable.less
+++ b/src/common/style/_variable.less
@@ -1,3 +1,4 @@
+/* 全局变量 */
 @primary-color: red; /* 主题色 */
 @header-bg: var(--ant-primary-color); /* 顶部栏背景色 */
 @selected-bg: var(--custom-selected-color);
