--- a/plop/page-template/_api_ts.hbs
+++ b/plop/page-template/_api_ts.hbs
@@ -1,5 +1,5 @@
 import { post } from "@/utils/axiosHelper";
 
-export const login = (data) => {
+export const login = (data:any) => {
   return post("account/login", data);
 };
